# Wcc2048

./: CMakeLists.txt  ExpGame.pro  README.md  main.cpp  webcamcap.cpp  webcamcap.h
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qgameboard.cpp  qgameboard.h  qgameoverwindow.cpp  qresetbutton.cpp
